SET(RASQAL_VERSION_MAJOR	0)
SET(RASQAL_VERSION_MINOR	9)
SET(RASQAL_VERSION_RELEASE	30)
SET(RASQAL_MIN_VERSION_DECIMAL	20000)

SET(VERSION "${RASQAL_VERSION_MAJOR}.${RASQAL_VERSION_MINOR}.${RASQAL_VERSION_RELEASE}")
MATH(EXPR RASQAL_VERSION_DECIMAL "${RASQAL_VERSION_MAJOR} * 10000 + ${RASQAL_VERSION_MINOR} * 100 + ${RASQAL_VERSION_RELEASE}")


#PROJECT(${RASQAL_NAME})

############################
#raptor2 libs

SET(RAPTOR2_INCLUDE 
	${CMAKE_CURRENT_SOURCE_DIR}/../raptor2/src 
	${CMAKE_CURRENT_BINARY_DIR}/../raptor2/src 
	)
INCLUDE_DIRECTORIES(
	${RAPTOR2_INCLUDE}
)
SET(RAPTOR2_LIB ${CMAKE_CURRENT_BINARY_DIR}/../raptor2/src/${CMAKE_BUILD_TYPE})
LINK_DIRECTORIES(
	${RAPTOR2_LIB})

######################################
# config files

ADD_DEFINITIONS(-DHAVE_CONFIG_H)
ADD_DEFINITIONS(-DRASQAL_INTERNAL)

SET(RASQAL_REGEX_PCRE TRUE)
SET(RASQAL_UUID_NONE TRUE)
SET(RASQAL_DECIMAL_NONE TRUE)
SET(RASQAL_DIGEST_INTERNAL TRUE)
SET(RASQAL_QUERY_SPARQL TRUE)

CONFIGURE_FILE(
	src/rasqal.h.in
	src/rasqal.h
	@ONLY
)

#CONFIGURE_FILE(
#	src/win32_rasqal_config.h.in
#	src/win32_rasqal_config.h
#	@ONLY
#)

CONFIGURE_FILE(
	src/rasqal_config_cmake.h.in
	src/rasqal_config.h
	@ONLY
)

ADD_SUBDIRECTORY(src)

