SET(LIBRDF_VERSION_MAJOR	1)
SET(LIBRDF_VERSION_MINOR	0)
SET(LIBRDF_VERSION_RELEASE	16)
SET(LIBRDF_MIN_VERSION_DECIMAL	20000)
SET(HAVE_LOCAL_MD5_DIGEST 1)

SET(VERSION "${LIBRDF_VERSION_MAJOR}.${LIBRDF_VERSION_MINOR}.${LIBRDF_VERSION_RELEASE}")
MATH(EXPR LIBRDF_VERSION_DECIMAL "${LIBRDF_VERSION_MAJOR} * 10000 + ${LIBRDF_VERSION_MINOR} * 100 + ${LIBRDF_VERSION_RELEASE}")


#PROJECT(${REDLAND_NAME})

############################
#3rd libs

SET(RAPTOR2_INCLUDE 
	${CMAKE_CURRENT_SOURCE_DIR}/../raptor2/src 
	${CMAKE_CURRENT_BINARY_DIR}/../raptor2/src 
	)
INCLUDE_DIRECTORIES(
	${RAPTOR2_INCLUDE}
)
SET(RAPTOR2_LIB ${CMAKE_CURRENT_BINARY_DIR}/../raptor2/src/${CMAKE_BUILD_TYPE})
LINK_DIRECTORIES(
	${RAPTOR2_LIB})


SET(RASQAL_INCLUDE 
	${CMAKE_CURRENT_SOURCE_DIR}/../rasqal/src 
	${CMAKE_CURRENT_BINARY_DIR}/../rasqal/src 
	)
INCLUDE_DIRECTORIES(
	${RASQAL_INCLUDE}
)
SET(RASQAL_LIB ${CMAKE_CURRENT_BINARY_DIR}/../rasqal/src/${CMAKE_BUILD_TYPE})
LINK_DIRECTORIES(
	${RASQAL_LIB})

################################

SET(BUILD_SHARED_LIBS TRUE)
ADD_DEFINITIONS(-DHAVE_CONFIG_H -DFOUNDER_XDB_SE)


SET(LIBRDF_INTERNAL TRUE)
SET(STORAGE_HASHES TRUE)
SET(STORAGE_TREES TRUE)
SET(STORAGE_MEMORY TRUE)
SET(STORAGE_FILE TRUE)

######################################
# config files

CONFIGURE_FILE(
	src/librdf.h.in
	src/librdf.h
	@ONLY
)

CONFIGURE_FILE(
	src/rdf_config_cmake.h.in
	src/rdf_config.h
	@ONLY
)

ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(examples)
